# GOTCHA

./: CMakeLists.txt
include/gotcha/: gotcha.h  gotcha_types.h
src/: CMakeLists.txt  elf_ops.c  elf_ops.h  gotcha.c  gotcha_dl.c  gotcha_dl.h  gotcha_utils.c
